# hermes

./: ARCHITECTURE.md  CONTRIBUTING.md  HELP.md  README.md  package.json  pnpm-lock.yaml  sample.hl7
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/architecture/: backend.md  communication.md  frontend.md  hl7-schema.md  networking.md  overview.md  updater.md
docs/development/: adding-features.md  best-practices.md  common-tasks.md  project-structure.md  setup.md  testing.md  troubleshooting.md  workflow.md
docs/development/coding-standards/: rust.md  svelte.md  typescript.md
extensions/: README.md
extensions/api-docs/: README.md  errors.md  lifecycle.md  protocol.md  reference.md  schema.md  types.md
extensions/api-docs/examples/: README.md  dialog.md  minimal.md  wizard.md
extensions/api-docs/messages/: README.md  commands.md  editor.md  initialize.md  shutdown.md  ui.md
extensions/examples/: dialog-extension.py  minimal.py  patient.json  wizard-extension.py
extensions/explanation/: README.md  architecture.md  events.md  lifecycle.md  schema-merging.md
extensions/how-to/: README.md  handle-errors.md  handle-events.md  manage-windows.md  provide-schema.md  read-modify-messages.md  show-dialogs.md
extensions/reference/: README.md  errors.md  protocol.md  schema-properties.md  types.md
extensions/reference/api/: command-execute.md  editor-get-message.md  editor-patch-message.md  editor-set-message.md  initialize.md  message-changed.md  message-opened.md  message-saved.md  shutdown.md  ui-close-window.md  ui-open-file.md  ui-open-files.md  ui-open-window.md  ui-save-file.md  ui-select-directory.md  ui-show-confirm.md  ui-show-message.md  window-closed.md
extensions/test-extensions/: README.md  dialogs.py  echo.py  editor-ops.py  events.py  schema-override.py  windows.py
extensions/tutorials/: README.md  dialogs.md  first-extension.md  responding-to-events.md  schema-overrides.md  toolbar-buttons.md  wizard-with-ui.md  working-with-messages.md
site/: index.html  index.md
src/: app.html  backend.ts  settings.ts
src-tauri/: Cargo.toml  build.rs  evn.toml  messages.toml  msh.toml  pid.toml  pv1.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: dg1.toml  evn.toml  messages.toml  msh.toml  nk1.toml  nte.toml  obr.toml  obx.toml  orc.toml  pid.toml  pv1.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  spec.rs  syntax_highlight.rs  syntax_hightlight.rs.bak  updater.rs
src-tauri/src/commands/: data.rs  diff.rs  field_description.rs  header.rs  listen.rs  locate_cursor.rs  menu.rs  mod.rs  patient.rs  schema.rs  send_receive.rs  syntax_highlight.rs  visit.rs
src-tauri/src/commands/communication/: listen.rs  mod.rs  send.rs
src-tauri/src/commands/editor/: cursor.rs  data.rs  export.rs  import.rs  mod.rs  segment.rs  syntax_highlight.rs
src-tauri/src/commands/extensions/: editor.rs  mod.rs  ui.rs
src-tauri/src/commands/support/: field_description.rs  mod.rs  open_url.rs  schema.rs
src-tauri/src/commands/validation/: diff.rs  mod.rs  validate.rs
src-tauri/src/commands/wizards/: interface.rs  mod.rs  patient.rs  visit.rs
src-tauri/src/extensions/: host.rs  mod.rs  process.rs  protocol.rs  types.rs
src-tauri/src/menu/: mod.rs  state.rs
src-tauri/src/schema/: cache.rs  merge.rs  message.rs  mod.rs  segment.rs
src-tauri/src/spec/: mod.rs  std_spec.rs
src/backend/: cursor.ts  data.ts  description.ts  header.ts  listen.ts  patient.ts  schema.ts  send_receive.ts  syntax_highlight.ts
src/backend/wizards/: header_wizard.ts  patient_wizard.ts  visit_wizard.ts  wizard_database.ts
src/lib/: communication_drawer.svelte  cursor_breadcrumbs.svelte  cursor_description.svelte  diff_modal.svelte  find_replace_bar.svelte  history.svelte.ts  insert_timestamp_modal.svelte  jump_to_field_modal.svelte  listen_modal.svelte  listen_tab.svelte  message_editor.svelte  message_editor.svelte.bak  message_send_modal.svelte  notification_icon.svelte  send_tab.svelte  settings_modal.svelte  tab.svelte  tabs.svelte  theme_toggle.svelte  toolbar.svelte  toolbar_button.svelte  toolbar_separator.svelte  toolbar_spacer.svelte
src/lib/communication/: communication_drawer.svelte  connection_preset.ts  connection_presets_modal.svelte  listen.ts  listen_modal.svelte  listen_tab.svelte  message_send_modal.svelte  send_receive.ts  send_tab.svelte
src/lib/components/: button.svelte  modal.svelte  modal_footer.svelte  modal_header.svelte
src/lib/diff/: diff.ts  diff_modal.svelte
src/lib/editor/: cursor_description.svelte  description.ts  export.ts  history.svelte.ts  import.ts  message_editor.svelte  segment.ts  syntax_highlight.ts
src/lib/extensions/: editor_bridge.ts  extensions.ts  types.ts
src/lib/find_replace/: find_replace_bar.svelte
src/lib/forms/: database_connection.svelte  datetime_picker.svelte  header_tab.svelte  input_field.svelte  patient_tab.svelte  segment_tab.svelte  toggle_switch.svelte
src/lib/icons/: IconAdd.svelte  IconCalendar.svelte  IconCalendarClock.svelte  IconCase.svelte  IconChevronDown.svelte  IconChevronUp.svelte  IconClipboard.svelte  IconClipboardCheck.svelte  IconHelp.svelte  (+24 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/: global.css  help.html
(+32 files in other folders)
