[package]
name = "hermes"
version = "0.1.0"
description = "An HL7 messaging tool for HL7 system"
authors = ["Kenton Hamaluik <khamaluik@hamaluik.ca>"]
edition = "2021"

[lib]
name = "hermes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hl7-parser = { version = "0.3.0", features = ["jiff", "serde"] }
log = { version = "0.4.27", features = ["kv"] }
tauri-plugin-log = "2"
hl7-definitions = { git = "https://github.com/hamaluik/hl7-definitions.git", version = "0.0.2" }
jiff = "0.2.10"
toml = { version = "0.8.20", features = ["preserve_order"] }
color-eyre = "0.6.3"
tokio = { version = "1.44.2", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
rand = "0.9.1"
hl7-mllp-codec = "0.4.0"
tokio-util = "0.7.15"
futures = "0.3.31"
bytes = "1.10.1"
tauri-plugin-clipboard-manager = "2"

