[package]
name = "hermes"
version = "0.1.0"
description = "An HL7 messaging tool"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/khamaluik/hermes"
homepage = "https://github.com/khamaluik/hermes"

[package.metadata.about]
# These fields are used by the About dialog (see lib.rs AboutMetadata)
copyright = "© 2025 Kenton Hamaluik"
credits = "Kenton Hamaluik"
website_label = "Visit Website"

[lib]
name = "hermes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.10"
hl7-parser = { version = "0.3.0", features = ["jiff", "serde"] }
log = { version = "0.4.27", features = ["kv"] }
tauri-plugin-log = "2"
hl7-definitions = { git = "https://github.com/hamaluik/hl7-definitions.git", version = "0.0.3" }
jiff = { version = "0.2.10", features = ["serde"] }
toml = { version = "0.8.20", features = ["preserve_order"] }
color-eyre = "0.6.3"
tokio = { version = "1.44.2", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
rand = "0.9.1"
hl7-mllp-codec = "0.4.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
futures = "0.3.31"
bytes = "1.10.1"
tauri-plugin-clipboard-manager = "2"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
shell-words = "1.1.0"

# macOS 26 Tahoe compatibility workaround
# see https://github.com/madsmtm/objc2/issues/765
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["relax-sign-encoding"] }

# desktop-only plugins
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }

# https://corrode.dev/blog/defensive-programming/
[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
unwrap_used = "deny" # use expect instead

